testsuite/tests/generic_interfaces/implements_other/test.out
== foo.lkt ==
foo.lkt:15:1: error: BarNode.prop implements Interface.method, but BarNode does not implement Interface
15 | class BarNode: FooNode {
   | ^


lkt_compile: Done
